// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateSeparator renders the date separator correctly 1`] = `
<Wrapper
  now="2021-12-17T08:09:00.000Z"
  ts={1639728540000}
>
  <DateSeparator
    now="2021-12-17T08:09:00.000Z"
    ts={1639728540000}
  >
    <h2
      aria-label="Today"
      className="mx_DateSeparator"
      role="separator"
      tabIndex={-1}
    >
      <hr
        role="none"
      />
      <div
        aria-hidden="true"
      >
        Today
      </div>
      <hr
        role="none"
      />
    </h2>
  </DateSeparator>
</Wrapper>
`;

exports[`DateSeparator when feature_jump_to_date is enabled renders the date separator correctly 1`] = `
<Wrapper
  now="2021-12-17T08:09:00.000Z"
  ts={1639728540000}
>
  <DateSeparator
    now="2021-12-17T08:09:00.000Z"
    ts={1639728540000}
  >
    <h2
      aria-label="Fri, Dec 17 2021"
      className="mx_DateSeparator"
      role="separator"
      tabIndex={-1}
    >
      <hr
        role="none"
      />
      <ContextMenuTooltipButton
        className="mx_DateSeparator_jumpToDateMenu"
        isExpanded={false}
        onClick={[Function]}
        title="Jump to date"
      >
        <AccessibleTooltipButton
          aria-expanded={false}
          aria-haspopup={true}
          className="mx_DateSeparator_jumpToDateMenu"
          forceHide={false}
          onClick={[Function]}
          onContextMenu={[Function]}
          title="Jump to date"
        >
          <AccessibleButton
            aria-expanded={false}
            aria-haspopup={true}
            aria-label="Jump to date"
            className="mx_DateSeparator_jumpToDateMenu"
            element="div"
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="Jump to date"
              className="mx_AccessibleButton mx_DateSeparator_jumpToDateMenu"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                aria-hidden="true"
              >
                Fri, Dec 17 2021
              </div>
              <div
                className="mx_DateSeparator_chevron"
              />
            </div>
          </AccessibleButton>
        </AccessibleTooltipButton>
      </ContextMenuTooltipButton>
      <hr
        role="none"
      />
    </h2>
  </DateSeparator>
</Wrapper>
`;
